; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_main.c_qlcnic_alloc_sds_rings.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_main.c_qlcnic_alloc_sds_rings.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlcnic_recv_context = type { i32* }

@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qlcnic_alloc_sds_rings(%struct.qlcnic_recv_context* %0, i32 %1) #0 {
  %3 = alloca %struct.qlcnic_recv_context*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.qlcnic_recv_context* %0, %struct.qlcnic_recv_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = sext i32 %6 to i64
  %8 = mul i64 4, %7
  %9 = trunc i64 %8 to i32
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call i32* @kzalloc(i32 %10, i32 %11)
  %13 = load %struct.qlcnic_recv_context*, %struct.qlcnic_recv_context** %3, align 8
  %14 = getelementptr inbounds %struct.qlcnic_recv_context, %struct.qlcnic_recv_context* %13, i32 0, i32 0
  store i32* %12, i32** %14, align 8
  %15 = load %struct.qlcnic_recv_context*, %struct.qlcnic_recv_context** %3, align 8
  %16 = getelementptr inbounds %struct.qlcnic_recv_context, %struct.qlcnic_recv_context* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32* @kzalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
